# read_manager

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  setup.py
config/: app_settings.yml
scripts/: app_settings.yml  git_util.py  utils.py
scripts/linux/: IDE_setup.py  lin_utils.py  setup_env.py  setup_premake.py
scripts/windows/: IDE_setup.py  setup_env.py  setup_premake.py  win_utils.py
src/: application.c  application.h  main.c
src/dashboard/: dashboard.c  dashboard.h
src/imgui_config/: imgui_config.c  imgui_config.h
src/platform/: window.c  window.h
src/render/: image.c  image.h  renderer.c  renderer.h
src/util/: breakpoint.h  core_config.h  crash_handler.c  crash_handler.h  system.c  system.h  util.c  util.h
src/util/UI/: pannel_collection.c  pannel_collection.h
src/util/data_structure/: darray.c  darray.h  data_types.h  dynamic_string.c  dynamic_string.h  stack.c  stack.h  unordered_map.c  unordered_map.h
src/util/io/: logger.c  logger.h  serializer_yaml.c  serializer_yaml.h
